# petprep_extract_tacs

./: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  crash-20230517-113120-martinnorgaard-create_weighted_average_pet.a0-ea9f05f8-9674-4b39-824a-bb8b61dfdb6b.pklz  crash-20231206-222218-martinnorgaard-opt_fwhm.a0-5fd9c6c0-cd9d-4bd9-b829-73a493630da5.pklz  docker_own.sh  environment.yml  nipype.config.docker  pyproject.toml  run.py  run2.py  setup.py  test_run_docker.sh  test_run_locally.sh
.github/workflows/: build-docs-with-actions.yaml  build-package-install.yaml  lint-and-spellcheck.yaml
data/derivatives/freesurfer/sub-002/scripts/: IsRunningBSsubst
data/derivatives/freesurfer/sub-004/scripts/: IsRunningBSsubst
data/derivatives/freesurfer/sub-018/scripts/: IsRunningBSsubst
data/derivatives/petprep_extract_tacs/sub-01/ses-baseline/: sub-01_ses-baseline_desc-whiteMatter_stats.tsv  (+2 more)
data/petprep_extract_tacs_wf/: graph.json  graph1.json
docs/: conf.py  extract_tacs.rst  index.rst  interfaces.rst  petprep_extract_tacs.rst  usage.rst  utils.rst
docs/examples/: example_tacs.tsv
freesurfer_binaries/: freesurfer_binaries_readme.txt
petprep_extract_tacs/: extract_tacs.py
petprep_extract_tacs/interfaces/: fs_model.py  fs_preprocess.py  petsurfer.py  segment.py
petprep_extract_tacs/utils/: datasink.py  merge_tacs.py  pet.py  raphe+pons.ctab  raphe+pons.n21.d114.h5  raphe+pons_cleaned.ctab  sclimbic_cleaned.ctab  utils.py
tests/: test_cli_pvc.py  test_copy_datasink.py  test_merge_tacs.py  test_utils.py
(+145 files in other folders)
