[tool.poetry]
name = "petprep_extract_tacs"
version = "0.0.3"
description = "PETPrep Extract Time Activity Curves Workflow"
authors = ["Martin Norgaard <martin.noergaard@di.ku.dk>"]
homepage = "https://github.com/mnoergaard/petprep_extract_tacs"
license = "MIT"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "8.1.3"
contourpy = "1.0.7"
matplotlib = "3.7.1"
networkx = "3.1"
nibabel = "5.1.0"
nipype = "1.8.6"
numpy = "1.24.2"
pandas = "2.0.0"
patsy = "0.5.3"
pillow = "9.5.0"
scipy = ">=1.3"
seaborn = "0.12.2"
statsmodels = "0.13.5"
traits = "6.3.2"
rdflib = "6.3.2"
astor = "0.8.1"
bids = "0.0"
bids-validator = "1.11.0"
docopt = "0.6.2"
formulaic = "0.5.2"
interface-meta = "1.3.0"
num2words = "0.5.12"
pybids = ">=0.16.1"
sqlalchemy = "1.3.24"
wrapt = "1.15.0"
niworkflows = "1.7.9"
ipython = "8.13.2"
petutils = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
nipreps = "^1.0"
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


